--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         const OBSTACLE_HEIGHT = 50;
         const OBSTACLE_FREQUENCY = 90; // 프레임마다 생성 빈도
         const OBSTACLE_SPEED = 4;
-        const SCORE_PER_OBSTACLE = 10; // 장애물 당 점수
+        const SCORE_PER_OBSTACLE = 100000000; // 장애물 당 점수
         // 음원 및 이미지 경로 설정
         const ASSETS = {
             sounds: {
@@ -92,7 +92,7 @@
                 defeat: './sounds/defeat1.mp3'
             },
             images: {
-                background: './images/background.png',
+                background: './images/ChatGPT Image 2025년 4월 23일 오후 01_26_39.png',
                 gameStart: './images/gamestart.png',
                 gameOver: './images/gameover.png',
                 restart: './images/restart.png',
