--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                 defeat: './sounds/defeat1.mp3'
             },
             images: {
-                background: './images/ChatGPT Image 2025년 4월 23일 오후 01_26_39.png',
+                background: './images/background-dy2.png',
                 gameStart: './images/gamestart.png',
                 gameOver: './images/gameover.png',
                 restart: './images/restart.png',
-                runnerA: './images/rtan_running_a.png',
-                runnerB: './images/rtan_running_b.png',
+                runnerA: './images/jimin-sit.png',
+                runnerB: './images/jimin-fly.png',
                 runnerCrash: './images/rtan_crash.png',
                 obstacle: './images/obstacle1.png'
             }
