--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         const CANVAS_HEIGHT = 500;    // 캔버스 세로 크기
 
         // 배경 스크롤 속도
-        const BG_MOVING_SPEED = 5;
+        const BG_MOVING_SPEED = 4;
 
         // 러너(르탄이) 설정
         const RUNNER_WIDTH = 100;
@@ -98,7 +98,7 @@
                 restart: './images/restart.png',
                 runnerA: './images/jimin-sit.png',
                 runnerB: './images/jimin-fly.png',
-                runnerCrash: './images/rtan_crash.png',
+                runnerCrash: './images/jimin-crash.png',
                 obstacle: './images/obstacle1.png'
             }
         };
