--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ document.addEventListener('keyup', e => {
 </head>
 
 <body>
-    <p id="subtitle">르탄이와 함께 최고점을 향하여!! 😀</p>
+    <p id="subtitle">날아라 안지민!</p>
     <p id="score">현재점수: 0</p>
     <main>
         <canvas id="canvas"></canvas>
