--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 runnerA: './images/jimin-sit.png',
                 runnerB: './images/jimin-fly.png',
                 runnerCrash: './images/jimin-crash.png',
-                obstacle1: './images/jimin-airplane.png'
+                obstacle1: './images/jimin-airplane.png',
                 obstacle2: './images/jimin-bird.png'
 
             }
@@ -147,7 +147,7 @@
             const runnerAImage = new Image(); runnerAImage.src = ASSETS.images.runnerA;
             const runnerBImage = new Image(); runnerBImage.src = ASSETS.images.runnerB;
             const crashImage = new Image(); crashImage.src = ASSETS.images.runnerCrash;
-            const obstacleImage = [
+            const obstacleImages = [
               new Image(),
               new Image()
             ];
