--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             },
             images: {
                 background: './images/background-dy2.png',
-                gameStart: './images/gamestart.png',
+                gameStart: './images/title.png',
                 gameOver: './images/gameover.png',
                 restart: './images/restart.png',
                 runnerA: './images/jimin-sit.png',
