--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>르탄이 달리기 게임 - 실습 시험지</title>
+    <title>날아라! 안지민</title>
     <!--
     ==============================
     ====== Customizable CSS ======
