--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ document.addEventListener('keyup', e => {
 </head>
 
 <body>
-    <p id="subtitle">날아라 안지민!</p>
+    <p id="subtitle">날아라! 안지민</p>
     <p id="score">현재점수: 0</p>
     <main>
         <canvas id="canvas"></canvas>
