--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             startImage.onload = () => {
                 drawStartScreen(); // 여기서 바로 실행
             };
-            startImage.src = ASSETS.images.title;
+            startImage.src = ASSETS.images.gameStart;
             const gameoverImage = new Image(); gameoverImage.src = ASSETS.images.gameOver;
             const restartImage = new Image(); restartImage.src = ASSETS.images.restart;
             const runnerAImage = new Image(); runnerAImage.src = ASSETS.images.runnerA;
