--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             bgImages[0].src = './images/background-dy2.png';
             bgImages[1].src = './images/background-dy3.png';
             bgImages[2].src = './images/background-dy4.png';
-            bgImages[3].src = './images/background4.png';
+            bgImages[3].src = './images/background-dy5.png';
             const startImage = new Image();
             startImage.onload = () => {
                 drawStartScreen();
